# config/routes.rb
@@ -9,6 +9,7 @@ Rails.application.routes.draw do
       get "openapi.json" => "openapi#show"
       get "me" => "me#show"
       delete "me" => "me#destroy"
+      post "account/deactivation" => "account_deactivations#create"
       get "discovery" => "discovery#index"
       get "find" => "find#index"
       get "profiles/:profile_id" => "profiles#show"
@@ -69,6 +70,7 @@ Rails.application.routes.draw do
       get "auth/methods" => "auth/methods#show"
       post "auth/password/register" => "auth/passwords#register"
       post "auth/password/login" => "auth/passwords#login"
+      post "auth/password/reactivation" => "auth/passwords#reactivate"
       patch "auth/password" => "auth/passwords#update"
       post "auth/email/change" => "auth/email_changes#create"
       patch "auth/email/change" => "auth/email_changes#update"
